update search results more quickly - also fixed weird issue when screen-width is too small

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -54,6 +54,7 @@ app-search-torrents {
 .homeContainer{
     flex: 1;
     min-height: 100vh;
+    min-width: 800px;
     width: 100%;
 }
 
